resources/assets/sass/app.scss
// Fonts
@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");

// Variables
@import "variables";

// Bootstrap
@import '~bootstrap/scss/bootstrap';

// Font awesome
@import "~font-awesome/scss/font-awesome.scss";

@import "hamburgers/hamburgers";

@import "_fonts";

@import "header";
@import "footer";

@import "forms";

@import "animals";


html {
  font-size: 14px;
}
body {
  font-family: "Montserrat", "Raleway", sans-serif;
  background-color: #effafd;
  color: #333;
  overflow-x: hidden;
  & > .container-fluid {
    max-width:1170px;
    background-color: #fff;
    padding: 0;
  }
  &.no-scroll {
    overflow: hidden;
  }
}

img.logo {
  width: 51px;
  height: 70px;
}
img {
  max-width: 100%;
}
.content-body {
  padding: 80px 50px 40px;
  min-height: 26rem;
}

@media (max-width: 900px) {
  html {
    font-size: 13px;
  }
  .content {
    padding: 80px 2.5vw 40px;
  }
}
@media (max-width: 650px) {
  html {
    font-size: 11px;
  }
  .content {
    padding: 30px 10px 20px;
  }
}

.page-title {
  display: flex;
  align-items: center;
  margin-top: -3.2rem;
  margin-bottom: 4rem;
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0.7px;
  .page-back-link {
    display: block;
    height: 3rem;
    width: 3rem;
    background-image: url('/img/icon/back.svg');
    background-position: center;
    background-repeat: no-repeat;
  }
  .title {
    margin: 0 1.4rem;
    max-width: 60%;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }
  .action-link {
    color: #014479;
    display: block;
    margin-left: 4.6rem;
  }
}
#birthday {
  cursor: default !important;
}
.hasDatepicker {
  cursor: default !important;
}
@media (max-width: 1100px) {
  .page-title {
    margin-top: -1rem;
    flex-flow: row wrap;
  }
}
@media (max-width: 650px) {
  .page-title {
    .title {
      max-width: 75%;
      width: 100%;
      font-size: 1.3rem;
    }
    .action-link {
      margin-left: 4.4rem;
    }
  }
}
@media (max-width: 400px) {
  .page-title {
    .title {
      max-width: 86%;
      width: 100%;
      font-size: 1.2rem;
      margin: 0;
    }
    .action-link {
      margin-left: 33px;
    }
  }
}
.cols-block {
  display: flex;
  padding-bottom: 3.5rem;
  .cols-block-header {
    flex-shrink: 0;
    padding-right: 3rem;
    width: 22rem;
    overflow: hidden;
    position: relative;
    .block-title {
      font-size: 1.4rem;
      font-weight: 600;
      letter-spacing: 1px;
      margin-bottom: 1rem;
    }
    .block-sub-title {
      color: #999;
      font-size: 1rem;
    }
  }
  .cols-block-content {
    padding: 3rem 0.5rem;
    font-size: 1.2rem;
    overflow: hidden;
    p {
      padding: 1.2rem 0;
    }
    &.form {
      width: 35rem;
    }
  }
  &.footer .cols-block-content {
    padding: 0 0 3rem;
    .form-buttons {
      display: flex;
      justify-content: space-between;
    }
  }
}
@media (max-width: 760px) {
  .cols-block {
    flex-flow: column;
    .cols-block-header {
      padding: 0 1rem;
      .block-title {
        font-size: 1.4rem;
        font-weight: 600;
        letter-spacing: 1px;
        margin-bottom: 1rem;
      }
      .block-sub-title {
        color: #999;
        font-size: 1rem;
      }
    }
    .cols-block-content {
      padding: 1rem;
      &.form {
        width: 100%;
      }
    }
    &.footer .cols-block-content {
      padding: 1rem;
    }
  }
}


.faq {
  .card {
    margin-bottom: 1.5rem;
    border: 1px solid #eee;
    border-radius: 0.8rem;
    .card-header {
      padding: 0;
      background-color: transparent;
      box-shadow: none;
      border: none;
      button {
        width: 100%;
        white-space: normal;
        text-align: left;
        padding: 1rem 4rem 1rem 2rem;
        color: #000;
        font-size: 1.3rem;
        border-radius: 0.7rem;
        text-decoration: none;
        background-color: #fff;
        font-weight: 500;
        > i.fa.fa-angle-down {
          position: absolute;
          right: 1.3rem;
          top: 0.9rem;
          font-size: 2.5rem;
          color: #555;
          transform: rotate(180deg);
          transition: ease 0.3s;
        }
        &.collapsed {
          background-color: #eee;
          > i.fa.fa-angle-down {
            transform: rotate(0deg);
          }
        }
      }
    }
    .card-body {
      padding: 0 2rem 1rem;
      color: #999;
      font-weight: 500;
    }
  }
}
.cols-block .cols-block-content.faq, .about-page {
  width: 100%;
  padding-top: 0px !important;
  margin-top: -1%;
}

.notification {
  display: flex;
  width: max-content;
  margin: 0 auto;
  background: #f2f2f2;
  align-items: center;
  border-radius: 2rem;
  border: 2px solid #1c4479;
  margin-top: 2rem;
  margin-bottom: -1rem;
  font-size: 1.2rem;
  color: #000 !important;
  .notification-content {
    width: 30rem;
    text-align: center;
    word-wrap: break-word;
  }
  i.fa.fa-bell {
    font-size: 2.4rem;
    padding: 0.5rem 1rem 0.5rem 2rem;
    color:  #f5be18;
  }
  i.fa.fa-angle-right {
    padding: 0.5rem 2rem 0.5rem 1rem;
    font-size: 1.7rem;
  }
}
.notification:hover {
  text-decoration: none;
}
@media (max-width: 650px) {
  .notification {
    margin-bottom: 0;
  }
}
@media (max-width: 500px) {
  .notification {
    width: 90%;
  }
}

